# agent-grpo-training

./: .gitignore  README.md  agent-thinking.txt  docker-compose.yml  isolated_rabbitmq_test.py  knowledge_base.json  litrature_review.md  purge_rabbitmq_queues.py  pyproject.toml  test_end_to_end.py  test_rabbitmq_communication.py  updated_architecture_diagram.md
adapters/: README.md  adapter_registry.json
developement_research/: README.md  llm_multiagent_coordination_arxiv2023.md  proagent_arxiv2023.md  react_iclr2023.md  reflexion_neurips2023.md  starling_arxiv2024.md
logs/: agent_interactions.jsonl
orchestrator/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
rabbitmq/: README.md
scoring_agent/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt
small_model_agent/: Dockerfile  main.py  pyproject.toml  requirements.txt
