[project]
name = "agent-grpo-training"
version = "0.1.0"
description = "Agentic workflow with GRPO training"
authors = [
    {name = "vrishbhanusingh",email = "vrishbhanu28@gmail.com"}
]
readme = "README.md"
requires-python = "^3.12"
dependencies = [
    "pika (>=1.3.2,<2.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "transformers (>=4.51.3,<5.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
